--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
     <string name="app_name">Stormy</string>
+    <string name="errorTitle">Oops! Sorry!</string>
+    <string name="dialogMessage">There was an error , please try again</string>
+    <string name="dialog_button_text">ok</string>
+    <string name="network_dialog_button_text">ok</string>
+    <string name="network_dialog_title">error</string>
+    <string name="network_dialog_message">There is no internet connection .</string>
+    <string name="network_dialog_tag">network_dialog</string>
+    <string name="error_dialog">error_dialog</string>
+    <string name="degree_image_view">degreeImageView</string>
+    <string name="weather_icon_imageView">weather icon imageView</string>
+    <string name="humidity">HUMIDITY</string>
+    <string name="rain">RAIN/SNOW</string>
+    <string name="refresh_icon">refresh icon</string>
+    <string name="getting_data">Getting data ...</string>
+    <string name="getting_location">getting location...</string>
 </resources>
